# auryx-agent

./: .gitignore  ANTI_HALLUCINATION.md  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  FEATURES_v0.2.md  GETTING_STARTED.md  GITHUB_SETUP.md  LICENSE  MIGRATION.md  MODELS.md  PROVIDERS.en.md  PROVIDERS.md  PROVIDER_USAGE.md  README.md  README.ru.md  ROADMAP.md  UPDATES.md  config.example.toml  networktools.md  pyproject.toml  v0.2.0_RELEASE.md
.kiro/specs/auryx-cli-agent/: design.md  requirements.md  tasks.md
auryx_agent/: __init__.py  __main__.py
auryx_agent/cli/: simple_chat.py
auryx_agent/core/: __init__.py  agent.py  client_factory.py  config.py  formatter.py  memory.py  model_parser.py  paths.py  yellowfire_client.py
auryx_agent/core/providers/: __init__.py  base.py  factory.py  google.py  groq.py  yellowfire.py
auryx_agent/tools/: __init__.py  advanced_computer_tools.py  code_tools.py  computer_tools.py  network_tools.py  web_tools.py
auryx_agent/tools/adapters/: __init__.py
examples/: multi_provider_example.py
tests/: __init__.py  test_hallucination_prevention.py
