[tool.poetry]
name = "auryx-agent"
version = "0.2.0"
description = "AI-powered network diagnostic CLI agent"
authors = ["sqrilizz <https://github.com/sqrilizz>"]
readme = "README.md"
packages = [{include = "auryx_agent"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
rich = "^13.7.0"
prompt-toolkit = "^3.0.43"
tomli = "^2.0.1"
psutil = "^5.9.0"
network-tools = {git = "https://github.com/Badim41/network_tools.git"}

# Optional provider dependencies
openai = {version = "^1.0.0", optional = true}
anthropic = {version = "^0.18.0", optional = true}
google-generativeai = {version = "^0.3.0", optional = true}
groq = {version = "^0.14.0", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
hypothesis = "^6.92.0"
pytest-mock = "^3.12.0"

[tool.poetry.extras]
openai = ["openai"]
anthropic = ["anthropic"]
google = ["google-generativeai"]
groq = ["groq"]
all-providers = ["openai", "anthropic", "google-generativeai", "groq"]

[tool.poetry.scripts]
auryx-agent = "auryx_agent.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
